# libTTS

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  README.md  bindings.cpp
cpp/: .clang-format  CMakeLists.txt
cpp/bindings/: bindings.cpp
cpp/source/: CMakeLists.txt  TopoAnalysis_main.cpp  als_seg_main.cpp  tts_test_main.cpp
cpp/source/ANN/: CMakeLists.txt
cpp/source/forman/: formangradient.cpp  formangradient.h  gradientencoding.cpp  gradientencoding.h  morsefeatures.cpp  morseincidencegraph.h  outputcells.cpp  tetragradient.h  trianglegradient.h  xx_globl_data.h  xx_vis.cpp
cpp/source/iastar/: io_functions.cpp  simplicialcomplex.cpp  simplicialcomplex.h  topsimplex.cpp  topsimplex.h  vertex.cpp
cpp/source/io_support/: CMakeLists.txt  another_cmakelists.txt
cpp/source/projects/: CMakeLists.txt  TopoSegment.cpp  TopoSegment.h  TopoSegment_mins_label.cpp  als_seg.cpp  als_seg.h  cgal_fixed_alphashape.h  cgal_fixed_alphashape_v2.h  xx_tts.cpp  xx_tts.h
cpp/source/usage/: Usage.h  xxTimer.h
python/: pyproject.toml
python/docs/: .gitignore  requirements.txt
python/docs/source/: api.rst  conf.py  index.rst
python/src/libtts/: __init__.py  ground_detection.py  io_functions.py  label_propagation.py  object_downsampling.py  points_downsampling.py  simple_ground_dection.py  simple_tree_detection.py  tree_detection.py  tree_extraction.py
some_examples/: .gitignore  basic_usage.ipynb  close_stems_3.pts  quick_test.py  tutorials.ipynb
source/forman/: CMakeLists.txt  morsefeatures.cpp  outputcells.cpp  tetragradient.h
source/iastar/: CMakeLists.txt  Timer.cpp  Timer.h  Usage.h  geometry.cpp  implicit_representation.cpp  io_functions.cpp  vertex.h
source/projects/: TopoAnalysis.h  TopoSegment.cpp  TopoSegment.h  TopoSegment_mins_label.cpp  als_seg.cpp  xx_tts.cpp  xx_tts.h
source/usage/: CMakeLists.txt  xxTimer.cpp
